# mirror-brain

./: .gitignore  AGENTS.md  BRAINSTORM.md  BUSINESS.md  MULTI-AGENT-BIZ.md  README.md  USAGE_V2.md  VISION.md  findings.md  mcp_server.py  mirror_brain.db  pyproject.toml  soul_core.md  soul_live.md
.archive/: schema.py.bak
.audit/: TEST_REPORT.md  test-run-20260620_123058.jsonl  test-run-20260620_123156.jsonl  test-run-20260620_123239.jsonl  test-run-20260620_123340.jsonl  test-run-20260620_123554.jsonl  test-run-20260620_123617.jsonl  test-run-20260620_123748.jsonl  test-run-20260620_124049.jsonl  test-run-20260620_124355.jsonl  test-run-20260620_124433.jsonl  test-run-20260620_124635.jsonl  test-run-20260620_124804.jsonl  test-run-20260620_130533.jsonl  test-run-20260620_130809.jsonl  test-run-20260620_131007.jsonl  test-run-20260620_131132.jsonl  test-run-20260620_132759.jsonl  test-run-20260620_133850.jsonl  test-run-20260620_134014.jsonl  test-run-20260620_134025.jsonl  test-run-20260620_134552.jsonl  test-run-20260620_134705.jsonl  test-run-20260620_134744.jsonl  test-run-20260620_135211.jsonl  test-run-20260620_135223.jsonl  test-run-20260620_135305.jsonl  test-run-20260620_135529.jsonl  test-run-20260620_135603.jsonl  test-run-20260620_135646.jsonl  test-run-20260620_140346.jsonl  test-run-20260620_140408.jsonl  test-run-20260620_140743.jsonl  test-run-20260620_140745.jsonl  test-run-20260620_144507.jsonl  test-run-20260620_144509.jsonl  test-run-20260620_151156.jsonl  test-run-20260620_151157.jsonl  test-run-20260620_151158.jsonl  test-run-20260620_151159.jsonl  (+31 more)
(+56 files in other folders)
